# RtmDet_Snpe

./: .gitignore  CMakeLists.txt  README.md  compile.sh  rtmdet.yaml  rtmdet_nonms.yaml
snpe_udo/: SNPEUDO.md
snpe_udo/HardSigmodUdoPackage/: Makefile
snpe_udo/HardSigmodUdoPackage/config/: Hardsigmoid.json
snpe_udo/HardSigmodUdoPackage/include/: HardSigmodUdoPackageCpuImplValidationFunctions.hpp  HardSigmodUdoPackageDspImplValidationFunctions.hpp  HardSigmodUdoPackageGpuImplValidationFunctions.hpp
snpe_udo/HardSigmodUdoPackage/include/utils/: UdoUtil.hpp
snpe_udo/HardSigmodUdoPackage/jni/: Android.mk  Application.mk
snpe_udo/HardSigmodUdoPackage/jni/src/CPU/makefiles/: Android.mk  Application.mk
snpe_udo/HardSigmodUdoPackage/jni/src/CPU/src/: HardSigmodUdoPackageInterface.cpp
snpe_udo/HardSigmodUdoPackage/jni/src/CPU/src/ops/: HardSigmoid.cpp
snpe_udo/HardSigmodUdoPackage/jni/src/CPU/src/utils/: BackendUtils.hpp
snpe_udo/HardSigmodUdoPackage/jni/src/DSP/: Makefile
snpe_udo/HardSigmodUdoPackage/jni/src/DSP/include/: DspOps.hpp
snpe_udo/HardSigmodUdoPackage/jni/src/DSP/src/: HardSigmodUdoPackageInterface.cpp
snpe_udo/HardSigmodUdoPackage/jni/src/DSP/src/ops/: HardSigmoid.cpp
snpe_udo/HardSigmodUdoPackage/jni/src/GPU/include/: Operation.hpp
snpe_udo/HardSigmodUdoPackage/jni/src/GPU/makefiles/: Android.mk  Application.mk
snpe_udo/HardSigmodUdoPackage/jni/src/GPU/src/: HardSigmodUdoPackageInterface.cpp
snpe_udo/HardSigmodUdoPackage/jni/src/GPU/src/ops/: HardSigmoid.cpp
snpe_udo/HardSigmodUdoPackage/jni/src/reg/: HardSigmodUdoPackageCpuImplValidationFunctions.cpp  HardSigmodUdoPackageDspImplValidationFunctions.cpp  HardSigmodUdoPackageGpuImplValidationFunctions.cpp  HardSigmodUdoPackageRegLib.cpp  Makefile
snpe_udo/HardSigmodUdoPackage/jni/src/utils/: UdoUtil.cpp
src/: Datatype.h  ImageProcessing.cpp  ImageProcessing.h  Maincfg.cpp  Maincfg.h  RtmDet.cpp  RtmDet.h  SnpeEngine.cpp  SnpeEngine.h  main.cpp
